# odin-api

./: .env.example  Dockerfile  Makefile  README.md  debug_mongo.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: discord_notifier.yml  docker-build-check.yml
docs/: 01-resumo-e-introducao.md  03-module-pattern.md  04-aggregations-endpoints.md
src/: main.py  server.py
src/application/aggregation/: get_city_aggregations.py  get_neighborhood_aggregations.py
src/application/common/: base_list_use_case.py
src/application/stats/: get_summary_stats_use_case.py
src/domain/entities/: bairro.py  city_aggregation.py  municipio.py  school.py  state.py  state_summary.py  stats.py  territorial_summary.py
src/domain/enums/: enum_dependencia_administrativa.py  enum_tipo_localizacao.py  enum_uf.py
src/domain/exceptions/: validation_error.py
src/domain/exeptions/: validation_error.py
src/domain/factories/: state_summary_factory.py
src/domain/repository/: bairro_repository.py  base_repository.py  municipio_repository.py  school_repository.py  state_repository.py  stats_repository.py  territorial_aggregation_repository.py
src/domain/validators/: neighborhood_validation.py  school_validation.py
tests/: conftest.py  factories.py  test_aggregation_route.py  test_mongo_municipio_repository.py  test_mongo_school_repository.py  test_mongo_territorial_aggregation_repository.py  test_municipio_route.py  test_school_entity.py  test_school_mapper.py  test_school_route.py  test_stats_repository.py
(+81 files in other folders)
